# invoice-processor

./: .gitignore  Dockerfile  README.md  docker-compose.local.yml  docker-compose.yml  pyproject.toml  pyproject.toml.backup
.github/workflows/: deploy.yml
artifacts/: invoice_graph.json  invoice_graph.mmd
config/: allowed_users_config.yaml  config_vars.yaml
scripts/: deploy-local.sh
src/invoice_processor/: agent.py  main.py  models.py  processor.py  prompts.py  slack_handler.py  tools.py
src/invoice_processor/agents/: agent.py
src/invoice_processor/app/: main.py  slack_bot.py  slack_handler.py
src/invoice_processor/config/: __init__.py  config.py
src/invoice_processor/core/: models.py  processor.py
src/invoice_processor/infrastructure/services/: embedding_service.py  ocr.py  odoo_connection_manager.py
src/invoice_processor/prompts/: __init__.py  invoice_ocr_prompt.py  invoice_prompt.py  invoice_reader_prompt.py  prompts.py
src/invoice_processor/services/: ocr.py  odoo_client.py  odoo_connection_manager.py
src/invoice_processor/tools/: odoo_tools.py  tools.py
tests/: conftest.py  export_graph.py  test_allowed_users.py  test_e2e_bugfixes.py  test_e2e_state_persistence.py  test_embedding_service.py  test_models_candidates.py  test_state_persistence.py
tests/deployment/: check_gcp_secrets.py  check_llm.py  check_odoo.py
