[project]
name = "invoice-processor"
version = "5.0.2"
description = ""
authors = [{ name = "Tomàs Nùñez Montagna", email = "ti@notorios.cl" }]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
      "pandas (>=2.2.3,<3.0.0)",
  "python-decouple (>=3.8,<4.0)",
  "python-dotenv (>=1.1.0,<2.0.0)",
  "langchain (>=0.3.25,<0.4.0)",
  "pydantic (>=2.11.4,<3.0.0)",
  "langchain-openai (>=0.3.17,<0.4.0)",
  "git-filter-repo (>=2.47.0,<3.0.0)",
  "langgraph-cli[inmem] (>=0.2.12,<0.3.0)",
  "odoo-api @ git+https://github.com/NotoriosTI/libraries.git@main#subdirectory=odoo-api",
  "odoo-engine @ git+https://github.com/NotoriosTI/libraries.git@main#subdirectory=odoo-engine",
  "slack-api @ git+https://github.com/NotoriosTI/libraries.git@main#subdirectory=slack-api",
  "dev-utils @ git+https://github.com/NotoriosTI/libraries.git@main#subdirectory=dev-utils",
  "google-cloud-secret-manager (>=2.24.0,<3.0.0)",
  "openai (>=1.91.0,<2.0.0)",
  "pytest (>=8.4.1,<9.0.0)",
  "langgraph-api (>=0.2.120,<0.3.0)",
  "langgraph (>=0.4.5)",
  "schedule (>=1.2.2,<2.0.0)",
  "langchain-anthropic (>=0.3.22,<0.4.0)",
  "langchain-community (>=0.3.31,<0.4.0)",
]